[package]
name = "ark-nonnative-field"
version = "0.3.0"
authors = [
    "Weikeng Chen",
    "Alessandro Chiesa",
    "Emma Dauterman",
    "Nicholas Ward"
]
description = "Constraints for nonnative field gadgets"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/nonnative"
documentation = "https://docs.rs/ark-nonnative-field/"
keywords = ["r1cs", "nonnative", "finite-fields"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "tests", "README.md"]
license = "MIT/Apache-2.0"
edition = "2018"

[profile.release]
debug = true
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
lto = "fat"
incremental = true
debug = false
rpath = false
debug-assertions = false

################################# Dependencies ################################

[dependencies]
derivative = { version = "2", features = [ "use_core" ] }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }


ark-ff = { git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features = false }
ark-ec = { git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features = false }
ark-std = { git = "https://github.com/SRI-CSL/utils", default-features = false }
ark-relations = { git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features = false }

ark-r1cs-std = { git = "https://github.com/SRI-CSL/r1cs-std", branch = "v3_sri", optional = true, default-features = false }
ark-snark = { git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features = false }

num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4.0", default-features = false }
num-integer = { version = "0.1.44", default-features = false }

[dev-dependencies]
paste = "1.0"

ark-bls12-377 = {git = "https://github.com/SRI-CSL/curves", features = ["curve"], branch = "v3_sri", default-features = false  }
ark-bls12-381 = { git = "https://github.com/SRI-CSL/curves", features = ["curve"], branch = "v3_sri", default-features = false  }
ark-mnt4-298 = { git = "https://github.com/SRI-CSL/curves", features = ["curve"], branch = "v3_sri", default-features = false  }
ark-mnt4-753 = { git = "https://github.com/SRI-CSL/curves", features = ["curve"], branch = "v3_sri", default-features = false  }
ark-mnt6-298 = { git = "https://github.com/SRI-CSL/curves", default-features = false, branch = "v3_sri"  }
ark-mnt6-753 = { git = "https://github.com/SRI-CSL/curves", default-features = false, branch = "v3_sri"  }
ark-pallas = { git = "https://github.com/SRI-CSL/curves", features = ["curve"],  default-features = false, branch = "v3_sri"  }


[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-relations/std", "ark-r1cs-std/std", "num-traits/std", "num-bigint/std" ]

[[bench]]
name = "nonnative-bench"
path = "benches/bench.rs"
harness = false
